--- a/web2py/applications/DarkCloud/views/layout1.html
+++ b/web2py/applications/DarkCloud/views/layout1.html
@@ -23,7 +23,30 @@
   <link rel="stylesheet" href="{{=URL('static','bower_components/bootstrap-daterangepicker/daterangepicker.css')}}">
   <!-- bootstrap wysihtml5 - text editor -->
   <link rel="stylesheet" href="{{=URL('static','plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css')}}">
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <link rel="stylesheet" href="/resources/demos/style.css">
+      <style>
 
+          .tab a{
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    transition: 0.3s;
+    font-size: 17px;
+           padding: 14px 16px;}
+          .tab { overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+              float: left;
+              width: 100%;
+          }
+          .tab a:hover {
+    background-color: #ddd;
+                        }
+
+      </style>
       <!--Tasneem includes-->
       <script type="text/javascript" src="scripts/jquery.js"></script>
 <!--[if lte IE 9]>
