add & delete sig.

--- a/web2py/applications/DarkCloud/views/layout1.html
+++ b/web2py/applications/DarkCloud/views/layout1.html
@@ -84,7 +84,19 @@
 <!-- Bootstrap 3.3.7 -->
 <script src="{{=URL('static','bower_components/bootstrap/dist/js/bootstrap.min.js')}}"></script>
 <!-- iCheck -->
-<script src="{{=URL('static','plugins/iCheck/icheck.min.js')}}"></script>
+
+  <script src="{{=URL('static','js/md5.js')}}"></script>
+  <script src="{{=URL('static','js/spark-md5.js')}}"></script>
+  <script src="{{=URL('static','js/spark-md5.min.js')}}"></script>
+  <script src="{{=URL('static','js/md5.min.js')}}"></script>
+  <script src="{{=URL('static','components/sha256.js')}}"></script>
+  <script src="{{=URL('static','components/md5.js')}}"></script>
+  <script src="{{=URL('static','components/enc-base64-min.js')}}"></script>
+  <script src="{{=URL('static','components/sha256-min.js')}}"></script>
+  <script src="{{=URL('static','rollups/hmac-sha256.js')}}"></script>
+<script src="{{=URL('static','components/md5-min.js')}}"></script>
+  <script src="{{=URL('static','rollups/hmac-md5.js')}}"></script>
+  <script src="{{=URL('static','rollups/md5.js')}}"></script>
 
 <!-- jQuery UI 1.11.4 -->
 <script src="{{=URL('static','bower_components/jquery-ui/jquery-ui.min.js')}}"></script>
