--- a/web2py/applications/DarkCloud/views/layout1.html
+++ b/web2py/applications/DarkCloud/views/layout1.html
@@ -24,7 +24,10 @@
   <!-- bootstrap wysihtml5 - text editor -->
   <link rel="stylesheet" href="{{=URL('static','plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css')}}">
 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-  <link rel="stylesheet" href="/resources/demos/style.css">
+       <link rel="stylesheet" href="{{=URL('static','Treant.css')}}">
+    <link rel="stylesheet" href="{{=URL('static','custom-color-plus-scrollbar.css')}}">
+
+    <link rel="stylesheet" href="{{URL('static','vendor/perfect-scrollbar/perfect-scrollbar.css')}}">
       <style>
 
           .tab a{
@@ -48,7 +51,6 @@
 
       </style>
       <!--Tasneem includes-->
-      <script type="text/javascript" src="scripts/jquery.js"></script>
 <!--[if lte IE 9]>
 <script src="scripts/IE9.js"></script>
 <![endif]-->
@@ -65,6 +67,14 @@
   <!-- iCheck -->
        <link rel="stylesheet" href="{{=URL('static','plugins/iCheck/square/blue.css')}}"/>
  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
+<script src="{{=URL('static','vendor/raphael.js')}}"></script>
+    <script src="{{=URL('static','Treant.js')}}"></script>
+
+    <script src="{{=URL('static','vendor/jquery.min.js')}}"></script>
+    <script src="{{=URL('static','vendor/jquery.mousewheel.js')}}"></script>
+    <script src="{{=URL('static','vendor/perfect-scrollbar/perfect-scrollbar.js')}}"></script>
+
+<!--    <script src="{{=URL('static','custom-color-plus-scrollbar.js')}}"></script>
 
 <!----------------------------------------------->
   </head>
